--- a/src/app/header.module.css
+++ b/src/app/header.module.css
@@ -1,8 +1,14 @@
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
   max-width: 100vw;
   background: #FAFBFC;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-  padding: 0 100px;
+  padding: 22px 70px;
 
 
   font-family: 'Roboto';
@@ -10,14 +16,32 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-
-  box-sizing: border-box;
 }
+.nav_items {
+  list-style: none;
+  font-size: 16px;
+}
+
 .nav_item {
-  margin-bottom: 20px;
+  color: rgba(51, 51, 51, 0.6);
+  text-decoration: none;
 }
 .title {
   font-size: 20px;
 
   color: #0290FF;
+}
+
+.active {
+  background: linear-gradient(0deg, #0290FF 0%, #46AEFF 100%);
+  border-radius: 1px;
+  background-repeat: repeat-x; 
+  background-position: 0 100%; 
+  background-size: 100% 2px; 
+
+  color: #333333;
+}
+
+.quit {
+  
 }
