--- a/src/app/header.module.css
+++ b/src/app/header.module.css
@@ -5,10 +5,11 @@
   flex-direction: row;
   flex-wrap: nowrap;
 
+
   max-width: 100vw;
   background: #FAFBFC;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-  padding: 22px 70px;
+  padding: 22px 68px;
 
 
   font-family: 'Roboto';
@@ -17,7 +18,17 @@
   font-size: 16px;
   line-height: 22px;
 }
+
+.menu {
+  flex-grow: 1;
+}
 .nav_items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 0;
+  padding: 0;
+
   list-style: none;
   font-size: 16px;
 }
@@ -25,11 +36,14 @@
 .nav_item {
   color: rgba(51, 51, 51, 0.6);
   text-decoration: none;
+  margin-right: 20px;
+  padding: 8px 10px;
 }
 .title {
   font-size: 20px;
-
   color: #0290FF;
+
+  margin-right: 840px;
 }
 
 .active {
@@ -43,5 +57,14 @@
 }
 
 .quit {
-  
+  color: rgba(2, 144, 255, 0.8);
+  text-decoration: none;
+}
+
+.quit::after {
+  position: relative;
+  top: 4px;
+  content: url(./img/_logout_.svg);
+  margin-left: 10px;
+  width: 20px;
 }
