--- a/src/app/Components/Header/header.module.css
+++ b/src/app/Components/Header/header.module.css
@@ -5,14 +5,12 @@
   flex-direction: row;
   flex-wrap: nowrap;
 
-
   max-width: 100vw;
-  background: #FAFBFC;
+  background: #fafbfc;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
   padding: 22px 68px;
 
-
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -41,17 +39,17 @@
 }
 .title {
   font-size: 20px;
-  color: #0290FF;
+  color: #0290ff;
 
   margin-right: 840px;
 }
 
 .active {
-  background: linear-gradient(0deg, #0290FF 0%, #46AEFF 100%);
+  background: linear-gradient(0deg, #0290ff 0%, #46aeff 100%);
   border-radius: 1px;
-  background-repeat: repeat-x; 
-  background-position: 0 100%; 
-  background-size: 100% 2px; 
+  background-repeat: repeat-x;
+  background-position: 0 100%;
+  background-size: 100% 2px;
 
   color: #333333;
 }
@@ -64,7 +62,7 @@
 .quit::after {
   position: relative;
   top: 4px;
-  content: url(./img/_logout_.svg);
+  content: url(../../img/_logout_.svg);
   margin-left: 10px;
   width: 20px;
 }
