--- a/src/app/Components/Filter/filter.module.css
+++ b/src/app/Components/Filter/filter.module.css
@@ -69,8 +69,12 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-}
 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+.input:hover {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
 .option {
   color: #333333;
 }
@@ -78,6 +82,10 @@
 .select {
   color: rgba(51, 51, 51, 0.5);
   width: 306px;
+}
+.select:focus {
+  background: rgba(2, 144, 255, 0.06);
+  outline: none;
 }
 
 .label {
@@ -123,7 +131,7 @@
   gap: 8px;
 
   width: 171px;
-  height: 40px;
+  height: 42px;
 
   background: linear-gradient(
     0deg,
@@ -140,4 +148,13 @@
   border: none;
 
   color: #fafcff;
+}
+
+.submit:hover {
+  background: linear-gradient(0deg, rgba(2, 144, 255, 0.9) 0%, rgba(70, 174, 255, 0.9) 100%);
+}
+
+.submit:focus {
+  background: linear-gradient(0deg, #0290FF 0%, #46AEFF 100%);
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
