--- a/src/app/Components/Map/MapComponent.module.css
+++ b/src/app/Components/Map/MapComponent.module.css
@@ -46,5 +46,11 @@
   height: 600px;
   background-color: #9199a7;
   margin-top: 20px;
+  border-radius: 13px;
+}
+
+.leaflet_container {
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
