--- a/src/app/Components/Map/MapComponent.module.css
+++ b/src/app/Components/Map/MapComponent.module.css
@@ -42,6 +42,7 @@
 }
 
 .map {
+  position: relative;
   max-width: 100vw;
   height: 600px;
   background-color: #9199a7;
@@ -49,7 +50,72 @@
   border-radius: 13px;
 }
 
+.map_legend {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+
+  position: absolute;
+  background-color: #0290ff;
+  background: rgba(255, 255, 255, 0.85);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+  backdrop-filter: blur(5px);
+
+  border-radius: 10px;
+  z-index: 1;
+  left: 20px;
+  bottom: 20px;
+}
+.map_legend ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.map_legend li:nth-child(1) {
+  padding-left: 25px;
+  background-image: url(../../img/Rectangle-red.svg);
+  background-position: 0 0;
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+}
+.map_legend li:nth-child(2) {
+  padding-left: 25px;
+  background-image: url(../../img/Rectangle-cyan.svg);
+  background-position: 0 0;
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+}
+.map_legend li:nth-child(3) {
+  padding-left: 25px;
+  background-image: url(../../img/Rectangle-blue.svg);
+  background-position: 0 0;
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+}
+.map_legend li:nth-child(4) {
+  padding-left: 25px;
+  background-image: url(../../img/Rectangle-black.svg);
+  background-position: 0 0;
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+}
+.map_legend li:nth-child(5) {
+  padding-left: 25px;
+  background-image: url(../../img/Rectangle-purple.svg);
+  background-position: 0 0;
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+}
+
+.map_legend li:nth-child(2n-1) {
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+
+
 .leaflet_container {
+  z-index: 0;
+  position: absolute;
   width: 100%;
   height: 100%;
   border-radius: 10px;
