--- a/src/app/Components/Footer/footer.module.css
+++ b/src/app/Components/Footer/footer.module.css
@@ -5,13 +5,9 @@
   flex-direction: row;
   flex-wrap: nowrap;
 
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  max-width: 100%;
 
-  width: 100%;
-  height: 70px;
-  padding: 0 68px;
+  padding: 22px 68px;
   background: #fafbfc;
   box-shadow: 0px -2px 1px rgba(0, 0, 0, 0.1);
 }
@@ -21,6 +17,7 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
+  /* identical to box height */
 
   color: rgba(51, 51, 51, 0.5);
 }
