--- a/src/app/Components/Map/MapComponent.module.css
+++ b/src/app/Components/Map/MapComponent.module.css
@@ -28,8 +28,10 @@
 .number {
   display: inline-block;
   color: white;
+  font-style: normal;
+  font-weight: 600;
   font-size: 16px;
-  font-weight: 500;
+  line-height: 22px;
   padding: 2px 10px;
   background: linear-gradient(
     0deg,
