--- a/src/app/Components/ExcelUpload/excelUpload.module.css
+++ b/src/app/Components/ExcelUpload/excelUpload.module.css
@@ -1,5 +1,8 @@
 .container {
   display: flex;
+
+  /*justify-content: space-between;*/
+
   justify-content: flex-start;
   align-items: flex-start;
   max-width: 100vw;
@@ -8,11 +11,12 @@
 }
 
 .block {
-  width: 300px;
+  width: 260px;
   height: 160px;
   background: rgba(2, 144, 255, 0.1);
   border-radius: 10px;
   margin-right: 20px;
+  /*margin: 0;*/
   padding: 20px;
 }
 
@@ -45,13 +49,16 @@
   text-decoration-line: underline;
 
   color: rgba(2, 144, 255, 0.7);
+
+  cursor: pointer;
 }
+/*
 .input_file_btn::after {
   content: url('../../img/arrow.svg');
   position: relative;
-  top: 7px;
-
+  top: 9px;
 }
+*/
 .input_file_text {
   font-style: normal;
   font-weight: 400;
@@ -68,4 +75,65 @@
 }
 .input_file input[type="file"] {
   display: none;
+}
+
+.btn_text {
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+
+  color: #fafcff;
+}
+
+.submit {
+  display: block;
+
+  margin: auto;
+  margin-top: 17px;
+
+  padding: 10px 32px;
+  gap: 8px;
+
+  width: 171px;
+  height: 42px;
+
+  background: linear-gradient(
+    0deg,
+    rgba(2, 144, 255, 0.8) 0%,
+    rgba(70, 174, 255, 0.8) 100%
+  );
+  border-radius: 10px;
+  border: none;
+}
+
+.submit:hover {
+  background: linear-gradient(
+    0deg,
+    rgba(2, 144, 255, 0.9) 0%,
+    rgba(70, 174, 255, 0.9) 100%
+  );
+}
+
+.submit:focus {
+  background: linear-gradient(0deg, #0290ff 0%, #46aeff 100%);
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.submit_disabled {
+  display: block;
+
+  margin: auto;
+  margin-top: 17px;
+
+  padding: 10px 32px;
+  gap: 8px;
+
+  width: 171px;
+  height: 42px;
+  border-radius: 10px;
+  border: none;
+
+  background-color: #D9D9D9 !important;
 }
