--- a/src/app/Components/ExcelUpload/excelUpload.module.css
+++ b/src/app/Components/ExcelUpload/excelUpload.module.css
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   max-width: 100vw;
-  padding: 0px 68px;
+  padding: 0 5%;
   margin-top: 20px;
 }
 
@@ -18,13 +18,7 @@
   margin-right: 20px;
   /*margin: 0;*/
   padding: 20px;
-}
 
-.block:hover {
-  background: rgba(2, 144, 255, 0.2);
-}
-
-.block_header {
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -32,8 +26,14 @@
 
   color: #333333;
 }
+
+.block:hover {
+  background: rgba(2, 144, 255, 0.2);
+}
+
 .block_row_2 {
   margin-top: 30px;
+  
 }
 .input_file {
   display: flex;
@@ -147,5 +147,5 @@
   border-radius: 10px;
   border: none;
 
-  background-color: #D9D9D9 !important;
+  background-color: #D9D9D9;
 }
