--- a/src/app/Components/Filter/filter.module.css
+++ b/src/app/Components/Filter/filter.module.css
@@ -1,6 +1,6 @@
 .filter {
-  margin-top: 40px;
-  padding: 0 68px;
+  margin-top: 2%;
+  padding: 0 5%;
 }
 
 .form {
@@ -20,11 +20,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 10px;
-  margin-right: 20px;
+  padding: 4%;
+  margin-right: 40px;
   gap: 54px;
 
-  width: 222px;
+
 
   background: #f8f8f8;
 
@@ -44,40 +44,15 @@
   color: rgba(51, 51, 51, 0.5);
 }
 
-.input[type="datetime-local"]:focus {
+.input:focus {
   outline: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  margin-right: 20px;
-  gap: 54px;
-
-  width: 222px;
-
   background: rgba(2, 144, 255, 0.06);
-
-  border: none;
-  border-radius: 10px;
-
-  color: #333333;
-
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 .input:hover {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.option {
-  color: #333333;
-}
 
 
 .label {
@@ -93,19 +68,14 @@
 
 
 .select {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+  box-sizing: border-box;
+  
   margin-right: 20px;
-  gap: 54px;
-
-  width: 222px;
-
   border: none;
   border-radius: 10px;
+  background: #f8f8f8;
 
+  width: 100%;
   color: #333333;
 
   font-family: "Roboto";
@@ -113,87 +83,8 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
-  border: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-.multiselect {
-  position: relative;
-  margin-right: 20px;
-  margin-left: 20px;
-}
-.select_icon {
-  position: absolute;
-  bottom: 10px;
-  right: 0px;
-  background: url(../../img/Vector.svg) no-repeat;
-  z-index: 100;
-  width: 30px;
-  height: 16px;
 }
 
-.select_icon_upside {
-  transform: rotate(180deg);
-  bottom: 18px;
-  right: 12px;
-}
-.selectBoxChecked {
-  border-radius: 10px 10px 0px 0px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-  background: rgb(255, 255, 255);
-  
-}
-.selectBox.can_hover:hover {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-}
-.selectBox select {
-  width: 100%;
-  color: rgba(51, 51, 51, 0.5);
-  padding-right: 56px;
-}
-
-.overSelect {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-.none {
-  display: none;
-}
-.checkboxes {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  /* identical to box height */
-
-  color: #333333;
-  box-sizing: border-box;
-  z-index: 1;
-  padding: 10px;
-  padding-top: 0px;
-  position: absolute;
-  display: block;
-
-  width: 100%;
-  background: rgb(255, 255, 255);
-  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.15);
-  border-radius: 0px 0px 10px 10px;
-}
-
-
-
-.checkboxes label {
-  display: block;
-}
-
-.checkboxes label:hover {
-  background-color: #1e90ff;
-}
 
 
 .btn_text {
@@ -245,7 +136,7 @@
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-/*.btn_text::after{
+/* .btn_text::after{
   content: url('../../img/arrow.svg');
   position: absolute;
-}*/
+} */
