--- a/src/app/Components/Footer/footer.module.css
+++ b/src/app/Components/Footer/footer.module.css
@@ -7,7 +7,7 @@
 
   max-width: 100%;
 
-  padding: 22px 68px;
+  padding: 2% 5%;
   background: #fafbfc;
   box-shadow: 0px -2px 1px rgba(0, 0, 0, 0.1);
 }
