--- a/src/app/Components/Header/header.module.css
+++ b/src/app/Components/Header/header.module.css
@@ -6,15 +6,10 @@
   flex-wrap: nowrap;
 
   max-width: 100vw;
+
   background: #fafbfc;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-  padding: 22px 68px;
-
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 22px;
+  padding: 2% 5%;
 }
 
 .menu {
@@ -24,24 +19,24 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: baseline;
   margin: 0;
   padding: 0;
+  width:  60%;
 
   list-style: none;
-  font-size: 16px;
 }
 
 .nav_item {
   color: rgba(51, 51, 51, 0.6);
   text-decoration: none;
-  margin-right: 20px;
-  padding: 8px 10px;
 }
 .title {
   font-size: 20px;
   color: #0290ff;
 
-  margin-right: 50%;
+  margin-right: 35%;
 }
 
 .active {
@@ -69,5 +64,4 @@
   content: url(../../img/_logout_.svg);
   margin-left: 10px;
   width: 20px;
-  
 }
