--- a/src/app/Components/Filter/filter.module.css
+++ b/src/app/Components/Filter/filter.module.css
@@ -87,7 +87,7 @@
 
 
 
-.btn_text {
+.btn_submit_text {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -96,7 +96,7 @@
   color: #fafcff;
 }
 
-.submit {
+.btn_submit {
   display: flex;
   justify-content: center;
   align-items: center;
